Clicking on the subject EMPTY also brings up the modal

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <div id="timetable-alert" class="alert alert-info alert-dismissible fade show" role="alert">
-            <button  id="data-dismiss-timetable-alert" type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <button id="data-dismiss-timetable-alert" type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             <p>Fill in your timetable by choosing a subject then selecting the relevant sessions.
@@ -150,26 +150,23 @@
                 <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Mon</div>
                 <div class="col-sm-3 ">
                     <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal" data-timetable-session="early-morning-session"
-                        data-day-of-the-week="Monday">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty"
+                        data-timetable-session="early-morning-session" data-day-of-the-week="Monday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column "></div>
                 <div class="col-sm-3">
                     <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal" data-timetable-session="late-morning-session"
-                        data-day-of-the-week="Monday">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty"
+                        data-timetable-session="late-morning-session" data-day-of-the-week="Monday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column"></div>
 
                 <div class="col-sm-3">
                     <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal" data-timetable-session="afternoon-session"
-                        data-day-of-the-week="Monday">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty"
+                        data-timetable-session="afternoon-session" data-day-of-the-week="Monday">EMPTY</button>
                     </div>
                 </div>
             </div>
@@ -178,26 +175,23 @@
                 <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Tue</div>
                 <div class="col-sm-3 ">
                     <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal" data-timetable-session="early-morning-session"
-                        data-day-of-the-week="Tuesday">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty"
+                        data-timetable-session="early-morning-session" data-day-of-the-week="Tuesday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column "></div>
                 <div class="col-sm-3">
                     <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal" data-timetable-session="late-morning-session"
-                        data-day-of-the-week="Tuesday">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty"
+                        data-timetable-session="late-morning-session" data-day-of-the-week="Tuesday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column"></div>
 
                 <div class="col-sm-3">
                     <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal" data-timetable-session="afternoon-session"
-                        data-day-of-the-week="Tuesday">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty"
+                        data-timetable-session="afternoon-session" data-day-of-the-week="Tuesday">EMPTY</button>
                     </div>
                 </div>
             </div>
@@ -206,26 +200,23 @@
                 <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Wed</div>
                 <div class="col-sm-3 ">
                     <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal" data-timetable-session="early-morning-session"
-                        data-day-of-the-week="Wednesday">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty"
+                        data-timetable-session="early-morning-session" data-day-of-the-week="Wednesday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column "></div>
                 <div class="col-sm-3">
                     <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal" data-timetable-session="late-morning-session"
-                        data-day-of-the-week="Wednesday">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty"
+                        data-timetable-session="late-morning-session" data-day-of-the-week="Wednesday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column"></div>
 
                 <div class="col-sm-3">
                     <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal" data-timetable-session="afternoon-session"
-                        data-day-of-the-week="Wednesday">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty"
+                        data-timetable-session="afternoon-session" data-day-of-the-week="Wednesday">EMPTY</button>
                     </div>
                 </div>
             </div>
@@ -234,26 +225,23 @@
                 <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Thu</div>
                 <div class="col-sm-3 ">
                     <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal" data-timetable-session="early-morning-session"
-                        data-day-of-the-week="Thursday">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty"
+                        data-timetable-session="early-morning-session" data-day-of-the-week="Thursday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column "></div>
                 <div class="col-sm-3">
                     <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal" data-timetable-session="late-morning-session"
-                        data-day-of-the-week="Thursday">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty"
+                        data-timetable-session="late-morning-session" data-day-of-the-week="Thursday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column"></div>
 
                 <div class="col-sm-3">
                     <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal" data-timetable-session="afternoon-session"
-                        data-day-of-the-week="Thursday">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty"
+                        data-timetable-session="afternoon-session" data-day-of-the-week="Thursday">EMPTY</button>
                     </div>
                 </div>
             </div>
@@ -262,26 +250,23 @@
                 <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Fri</div>
                 <div class="col-sm-3 ">
                     <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal" data-timetable-session="early-morning-session"
-                        data-day-of-the-week="Friday">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty"
+                        data-timetable-session="early-morning-session" data-day-of-the-week="Friday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column "></div>
                 <div class="col-sm-3">
                     <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal" data-timetable-session="late-morning-session"
-                        data-day-of-the-week="Friday">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty"
+                        data-timetable-session="late-morning-session" data-day-of-the-week="Friday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column"></div>
 
                 <div class="col-sm-3">
                     <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal"  data-timetable-session="afternoon-session"
-                        data-day-of-the-week="Friday">EMPTY</button>
+                        <button disabled="true" class="col-12 rounded subject subject-empty"
+                        data-timetable-session="afternoon-session" data-day-of-the-week="Friday">EMPTY</button>
                     </div>
                 </div>
             </div>
