Refactoring code to shared project

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -64,7 +64,7 @@
                     type="button" draggable="true">RCCT</div>
                 </div>
                 <div class="col-sm-2">
-                    <div id="subject-assembly-button" class="btn rounded subject-assembly-button class-timetable-button"
+                    <div id="subject-assembly" class="btn rounded subject-assembly class-timetable-button"
                     type="button" draggable="true">Assembly</div>
                 </div>
             </div>
@@ -115,33 +115,33 @@
                 <div class="col-sm-1"></div>
                 <div class="col-sm-3">
                     <div class="row">
-                        <div class="col-sm-1 timetable-time">@schoolDayTimes.schoolDayStarts.toString</div>
+                        <div id="timetable-time-school-starts" class="col-sm-1 timetable-time">@schoolDayTimes.schoolDayStarts.toString</div>
                         <div class="col-sm-11"></div>
                     </div>
                 </div>
                 <div class="col-sm-1">
                     <div class="row">
-                        <div class="col-sm-1 timetable-time">@schoolDayTimes.morningBreakStarts.toString</div>
+                        <div id="timetable-time-morning-break-starts" class="col-sm-1 timetable-time">@schoolDayTimes.morningBreakStarts.toString</div>
                         <div class="col-sm-11"></div>
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="row">
-                        <div class="col-sm-1 timetable-time">@schoolDayTimes.morningBreakEnds.toString</div>
+                        <div id="timetable-time-morning-break-ends" class="col-sm-1 timetable-time">@schoolDayTimes.morningBreakEnds.toString</div>
                         <div class="col-sm-11"></div>
                     </div>
                 </div>
                 <div class="col-sm-1">
                     <div class="row">
-                        <div class="col-sm-1 timetable-time">@schoolDayTimes.lunchStarts.toString</div>
+                        <div id="timetable-time-lunch-starts" class="col-sm-1 timetable-time">@schoolDayTimes.lunchStarts.toString</div>
                         <div class="col-sm-11"></div>
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="row">
-                        <div class="col-sm-1 timetable-time">@schoolDayTimes.lunchEnds.toString</div>
+                        <div id="timetable-time-lunch-ends" class="col-sm-1 timetable-time">@schoolDayTimes.lunchEnds.toString</div>
                         <div class="col-sm-10"></div>
-                        <div class="col-sm-1 timetable-time">@schoolDayTimes.schoolDayEnds.toString</div>
+                        <div id="timetable-time-school-ends" class="col-sm-1 timetable-time">@schoolDayTimes.schoolDayEnds.toString</div>
                     </div>
                 </div>
             </div>
