add clearing full timetable option

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -509,8 +509,8 @@
                             <div class="progress-bar" role="progressbar" style="width: 67%" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </button>
-                    <button type="button" class="btn btn-secondary progress-bar-striped quick-select-button" >
-                        Full Session
+                    <button id="add-subject-to-fill-session-button" type="button" class="btn btn-secondary progress-bar-striped quick-select-button" >
+                        Fill Session
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
