can now get all sessions from timetable in a nice format for manipulation

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -144,131 +144,132 @@
                 </div>
             </div>
 
-            <div class="row dayoftheweek-row align-items-center">
-                <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Mon</div>
-                <div class="col-sm-3 ">
-                    <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty"
-                        data-timetable-session="early-morning-session" data-day-of-the-week="Monday">EMPTY</button>
+            <div id="all-the-weeks-rows">
+                <div class="row dayoftheweek-row align-items-center">
+                    <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Mon</div>
+                    <div class="col-sm-3 ">
+                        <div class="row">
+                            <button disabled="true" class="col-12 rounded subject subject-empty"
+                            data-timetable-session="early-morning-session" data-day-of-the-week="Monday">EMPTY</button>
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-1 small-column "></div>
-                <div class="col-sm-3">
-                    <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty"
-                        data-timetable-session="late-morning-session" data-day-of-the-week="Monday">EMPTY</button>
+                    <div class="col-sm-1 small-column "></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <button disabled="true" class="col-12 rounded subject subject-empty"
+                            data-timetable-session="late-morning-session" data-day-of-the-week="Monday">EMPTY</button>
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-1 small-column"></div>
+                    <div class="col-sm-1 small-column"></div>
 
-                <div class="col-sm-3">
-                    <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty"
-                        data-timetable-session="afternoon-session" data-day-of-the-week="Monday">EMPTY</button>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <button disabled="true" class="col-12 rounded subject subject-empty"
+                            data-timetable-session="afternoon-session" data-day-of-the-week="Monday">EMPTY</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row dayoftheweek-row align-items-center">
+                    <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Tue</div>
+                    <div class="col-sm-3 ">
+                        <div class="row">
+                            <button disabled="true" class="col-12 rounded subject subject-empty"
+                            data-timetable-session="early-morning-session" data-day-of-the-week="Tuesday">EMPTY</button>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column "></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <button disabled="true" class="col-12 rounded subject subject-empty"
+                            data-timetable-session="late-morning-session" data-day-of-the-week="Tuesday">EMPTY</button>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <button disabled="true" class="col-12 rounded subject subject-empty"
+                            data-timetable-session="afternoon-session" data-day-of-the-week="Tuesday">EMPTY</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row dayoftheweek-row align-items-center">
+                    <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Wed</div>
+                    <div class="col-sm-3 ">
+                        <div class="row">
+                            <button disabled="true" class="col-12 rounded subject subject-empty"
+                            data-timetable-session="early-morning-session" data-day-of-the-week="Wednesday">EMPTY</button>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column "></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <button disabled="true" class="col-12 rounded subject subject-empty"
+                            data-timetable-session="late-morning-session" data-day-of-the-week="Wednesday">EMPTY</button>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <button disabled="true" class="col-12 rounded subject subject-empty"
+                            data-timetable-session="afternoon-session" data-day-of-the-week="Wednesday">EMPTY</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row dayoftheweek-row align-items-center">
+                    <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Thu</div>
+                    <div class="col-sm-3 ">
+                        <div class="row">
+                            <button disabled="true" class="col-12 rounded subject subject-empty"
+                            data-timetable-session="early-morning-session" data-day-of-the-week="Thursday">EMPTY</button>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column "></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <button disabled="true" class="col-12 rounded subject subject-empty"
+                            data-timetable-session="late-morning-session" data-day-of-the-week="Thursday">EMPTY</button>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <button disabled="true" class="col-12 rounded subject subject-empty"
+                            data-timetable-session="afternoon-session" data-day-of-the-week="Thursday">EMPTY</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row dayoftheweek-row align-items-center">
+                    <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Fri</div>
+                    <div class="col-sm-3 ">
+                        <div class="row">
+                            <button disabled="true" class="col-12 rounded subject subject-empty"
+                            data-timetable-session="early-morning-session" data-day-of-the-week="Friday">EMPTY</button>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column "></div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <button disabled="true" class="col-12 rounded subject subject-empty"
+                            data-timetable-session="late-morning-session" data-day-of-the-week="Friday">EMPTY</button>
+                        </div>
+                    </div>
+                    <div class="col-sm-1 small-column"></div>
+
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <button disabled="true" class="col-12 rounded subject subject-empty"
+                            data-timetable-session="afternoon-session" data-day-of-the-week="Friday">EMPTY</button>
+                        </div>
                     </div>
                 </div>
             </div>
-
-            <div class="row dayoftheweek-row align-items-center">
-                <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Tue</div>
-                <div class="col-sm-3 ">
-                    <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty"
-                        data-timetable-session="early-morning-session" data-day-of-the-week="Tuesday">EMPTY</button>
-                    </div>
-                </div>
-                <div class="col-sm-1 small-column "></div>
-                <div class="col-sm-3">
-                    <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty"
-                        data-timetable-session="late-morning-session" data-day-of-the-week="Tuesday">EMPTY</button>
-                    </div>
-                </div>
-                <div class="col-sm-1 small-column"></div>
-
-                <div class="col-sm-3">
-                    <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty"
-                        data-timetable-session="afternoon-session" data-day-of-the-week="Tuesday">EMPTY</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row dayoftheweek-row align-items-center">
-                <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Wed</div>
-                <div class="col-sm-3 ">
-                    <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty"
-                        data-timetable-session="early-morning-session" data-day-of-the-week="Wednesday">EMPTY</button>
-                    </div>
-                </div>
-                <div class="col-sm-1 small-column "></div>
-                <div class="col-sm-3">
-                    <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty"
-                        data-timetable-session="late-morning-session" data-day-of-the-week="Wednesday">EMPTY</button>
-                    </div>
-                </div>
-                <div class="col-sm-1 small-column"></div>
-
-                <div class="col-sm-3">
-                    <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty"
-                        data-timetable-session="afternoon-session" data-day-of-the-week="Wednesday">EMPTY</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row dayoftheweek-row align-items-center">
-                <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Thu</div>
-                <div class="col-sm-3 ">
-                    <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty"
-                        data-timetable-session="early-morning-session" data-day-of-the-week="Thursday">EMPTY</button>
-                    </div>
-                </div>
-                <div class="col-sm-1 small-column "></div>
-                <div class="col-sm-3">
-                    <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty"
-                        data-timetable-session="late-morning-session" data-day-of-the-week="Thursday">EMPTY</button>
-                    </div>
-                </div>
-                <div class="col-sm-1 small-column"></div>
-
-                <div class="col-sm-3">
-                    <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty"
-                        data-timetable-session="afternoon-session" data-day-of-the-week="Thursday">EMPTY</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row dayoftheweek-row align-items-center">
-                <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Fri</div>
-                <div class="col-sm-3 ">
-                    <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty"
-                        data-timetable-session="early-morning-session" data-day-of-the-week="Friday">EMPTY</button>
-                    </div>
-                </div>
-                <div class="col-sm-1 small-column "></div>
-                <div class="col-sm-3">
-                    <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty"
-                        data-timetable-session="late-morning-session" data-day-of-the-week="Friday">EMPTY</button>
-                    </div>
-                </div>
-                <div class="col-sm-1 small-column"></div>
-
-                <div class="col-sm-3">
-                    <div class="row">
-                        <button disabled="true" class="col-12 rounded subject subject-empty"
-                        data-timetable-session="afternoon-session" data-day-of-the-week="Friday">EMPTY</button>
-                    </div>
-                </div>
-            </div>
-
         </div>
 
         <br>
