--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -144,7 +144,7 @@
                 </div>
             </div>
 
-            <div id="all-the-weeks-rows">
+            <div id="all-the-days-rows">
                 <div class="row dayoftheweek-row align-items-center">
                     <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Mon</div>
                     <div class="col-sm-3 ">
