--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -490,19 +490,19 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <button type="button" class="btn btn-secondary progress-bar-striped quick-select-button" >
+                    <button id="add-subject-to-one-third-session-button" type="button" class="btn btn-secondary progress-bar-striped quick-select-button" >
                         1/3 Session
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 33%" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </button>
-                    <button type="button" class="btn btn-secondary progress-bar-striped quick-select-button" >
+                    <button id="add-subject-to-half-session-button" type="button" class="btn btn-secondary progress-bar-striped quick-select-button" >
                         1/2 Session
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </button>
-                    <button type="button" class="btn btn-secondary progress-bar-striped quick-select-button" >
+                    <button id="add-subject-to-two-thirds-session-button" type="button" class="btn btn-secondary progress-bar-striped quick-select-button" >
                         2/3 Session
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 67%" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100"></div>
