--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -9,7 +9,7 @@
         <h1 class="text-center">Timetable : Class P4B<em> TODO</em></h1>
     </div>
 
-    <div class="container">
+    <div class="container" hidden="true">
         <div id="timetable-alert" class="alert alert-info alert-dismissible fade show" role="alert">
             <button id="data-dismiss-timetable-alert" type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
