Can now clear the whole timetable

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -270,7 +270,14 @@
                     </div>
                 </div>
             </div>
+
+            <div class="clear-cancel-save-buttons">
+                <button id="clear-subjects-from-class-timetable-button" type="button" class="btn btn-lg btn-secondary">Clear</button>
+                <button id="cancel-class-timetable-button" type="button" class="btn btn-lg btn-secondary">Cancel</button>
+                <button id="save-class-timetable-button" type="button" class="btn btn-lg btn-primary">Save</button>
+            </div>
         </div>
+
 
     </section>
 
@@ -345,6 +352,7 @@
             </div>
         </div>
     </div>
+
 
     <script type="text/javascript">
             $('#timepicker1').timepicker({
